--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -22,7 +22,7 @@ h2 {
 }
 
 .rules {
-    margin-bottom: 8px;
+    margin-bottom: 2rem;
 }
 
 #crystals {
@@ -59,7 +59,7 @@ h2 {
 
 .totalScore {
     display: block;
-    height: 100px;
+    height: 100%;
     padding: 0px;
 }
 
@@ -77,7 +77,10 @@ h2 {
 
 .totalscore-body {
     text-align: center;
-    margin-bottom: 10px;
+}
+
+.crystals-body {
+    margin-top: 2rem;
 }
 
 .targetnumber-body {
@@ -97,3 +100,4 @@ h2 {
 .swal-text {
     font-size: 30px;
 }
+
